# application/rest/docs/swagger.yaml
@@ -2,8 +2,6 @@ basePath: /api/v1
 definitions:
   rest.CreateEmployeeRequest:
     properties:
-      company_id:
-        type: string
       cpf:
         type: string
       email:
@@ -15,7 +13,6 @@ definitions:
       pis:
         type: string
     required:
-    - company_id
     - cpf
     - email
     - first_name
@@ -29,8 +26,10 @@ definitions:
     type: object
   rest.Employee:
     properties:
-      company_id:
-        type: string
+      companies:
+        items:
+          type: string
+        type: array
       cpf:
         type: string
       created_at:
